# toybox

./: .gitignore  .gitmodules  README.md  ToyBox.cabal
cryptol/: README.md
documents/AFP08/: AFP08-notes.txt  Install.cabal  README.md
documents/AFP08/cabal-configs/: Install.cabal
documents/AFP08/examples/: ParMapFibEuler1.hs  ParMapFibEuler2.hs  ParSumFibEuler1.hs  ParSumFibEuler2.hs  ParSumFibEuler3.hs  ParSumFibEuler4.hs  QuickSort.hs  SumFibEuler.hs
documents/AFP08/scripts/: test-profiling.sh  test.sh
documents/AFP08/src/: AFP08.hs
documents/AFP08/src/AFP08/: Argv.hs  Elapsed.hs  Euler.hs  Fib.hs  FibEuler.hs  Misc.hs  Sort.hs
documents/YesodWeb_book/: Install.cabal  client_session_key.aes  info  template.lucius
documents/YesodWeb_book/examples/: test1.hs  test2.hs  test3.hs  test5.hs
documents/YesodWeb_book/yinit/: info
documents/YesodWeb_book/yinit/one/: devel.hs  one.cabal
documents/YesodWeb_book/yinit/one/config/: keter.yaml
documents/YesodWeb_book/yinit/one/deploy/: Procfile
haskell/: README.md
haskell/Applicative/: tb-applicative.cabal
haskell/Applicative/src/: hello.hs
haskell/Atom/: Install.cabal
haskell/Cloud.Haskell/: Install.cabal
haskell/Cloud.Haskell/src/: test1.hs
haskell/Common/: Install.cabal
haskell/Common/src/Common/: Sums.hs
haskell/Core/: compile
haskell/Core/src/: int.hcr
haskell/Criterion/: Install.cabal  README.md  tb-criterion.cabal
haskell/Criterion/sample-reports/: compare
haskell/Data.Either/: Install.cabal
haskell/Data.Either/src/: alternative.hs  monad.hs
haskell/Data.List/src/: alternative.hs  monad.hs
haskell/Data.Maybe/src/: alternative.hs  applicative.hs  monadfix.hs  monadplus.hs  traversable.hs
haskell/Examples/Parallel-Concurrent/: Install.cabal
haskell/Examples/Scripting/: Makefile  script
haskell/Fibonacci/: Install.cabal
haskell/Fibonacci/src/: fib.hs
haskell/GoatsWolvesLions/profiling/: gwl-strict.prof  non-strict.06-16-2014.prof  strict.06-16-2014.prof
haskell/GoatsWolvesLions/src/: main  main.hs
haskell/Lens/: Install.cabal  tb-lens.cabal
haskell/MTL/: Install.cabal
haskell/MTL/src/: stackRWST.hs  stateT.hs
haskell/Normal-Form/: Install.cabal
haskell/Normal-Form/src/: nf-vs-whnf.hs
haskell/Pipes/: Install.cabal
haskell/Pipes.CSV/: Install.cabal
haskell/QuickCheck/: Install.cabal
haskell/QuickCheck/src/: misc.hs
haskell/RazvanRanca/GenericPretty/: Makefile  tb-GenericPretty.cabal
haskell/Reactive.Banana/src/: keymap.hs
haskell/STM/: info  tb-stm.cabal
haskell/STM/src/TB/STM/: Counter.hs
haskell/STM/test/: config.json
haskell/Text.CSV/: Install.cabal
haskell/Text.CSV/profiling/: parse.hp
haskell/TidBits/: Install.cabal
haskell/TidBits/src/: TypeClasses.hs
haskell/Unboxed/: Install.cabal
haskell/acid-state/acid-state/: tb-acid-state.cabal
haskell/acme-dont/: Makefile  tb-acme-dont.cabal
haskell/acme-omitted/: tb-acme-omitted.cabal
haskell/acme/omitted/: tb-acme-omitted.cabal
haskell/adarqui/acid-state-servant/: acid-state-servant.cabal
haskell/adarqui/useless/: tb-useless.cabal
haskell/base/ghc-arr/: tb-ghc-arr.cabal
haskell/base/instances/: tb-instances.cabal
haskell/base/prim/: tb-prim.cabal
haskell/bmillwood/haskell-src-meta/: tb-haskell-src-meta.cabal
haskell/books/algorithms_a_functional_approach/: algorithms-a-functional-approach.cabal
haskell/bos/aeson/: tb-aeson.cabal
haskell/bos/attoparsec/: tb-attoparsec.cabal
haskell/bos/criterion/: tb-criterion.cabal
haskell/bos/filemanip/: tb-filemanip.cabal
haskell/bos/statistics/: LICENSE  tb-statistics.cabal
haskell/bryant/punkt/: Makefile  tb-punkt.cabal
haskell/cloud-haskell/: Install.cabal
haskell/control/stm/: Makefile
haskell/courses/cis194/: cis194.cabal
haskell/data/binary/: tb-binary.cabal
haskell/data/bytestring/: tb-bytestring.cabal
haskell/data/configurator/: tb-configurator.cabal
haskell/data/either/: tb-data-either.cabal
haskell/data/function-arraymemoize/: Install.cabal  tb-function-arraymemoize.cabal
haskell/data/list/: tb-data-list.cabal
haskell/data/maybe/: tb-data-maybe.cabal
haskell/data/typeable/: tb-typeable.cabal
haskell/ekmett/algebra/: tb-algebra.cabal
haskell/ekmett/bifunctor/: tb-bifunctor.cabal
haskell/ekmett/contravariant/: tb-contravariant.cabal
haskell/ekmett/keys/: tb-keys.cabal
haskell/ekmett/lens/: tb-lens.cabal
haskell/ekmett/nats/: tb-nats.cabal
haskell/ekmett/profunctors/: tb-profunctors.cabal
haskell/ekmett/semigroups/: tb-semigroups.cabal
haskell/ekmett/tagged/: tb-tagged.cabal
haskell/instances/: tb-instances.cabal
haskell/language-extensions/: tb-language-extensions.cabal
haskell/language-extensions/src/TB/Language/Extensions/: ApplicativeDo.hs
haskell/quickcheck/: tb-quickcheck.cabal
haskell/quickcheck/src/TB/QuickCheck/: Basic.hs
haskell/servant/: Makefile  tb-servant.cabal
haskell/servant/src/TB/Servant/API/: Counter.hs
ivory/: README.md
purescript/: README.md
src/: info
src/Acme.Dont/: Install.cabal
src/Acme.Omitted/: Install.cabal
src/Acme.Omitted/src/: omitted.hs
src/Atom/: example.c  example.h
src/Common/: Install.cabal
src/Complexity/: Install.cabal  sources.txt
src/Complexity/src/: complexity.hs
src/Core/: Install.cabal
src/Core/src/Core/: ClassFoo.hs  Flip.hcr  Fn1.hcr  Fn1.hs  Fn1.out  Foo.hs  Foo.out  Id.hcr  IntConst.hcr  IntConst.out  IntList.hs  Main.hs  Square.out
src/Criterion/: sources.txt
src/Data.Data/: Install.cabal
src/Data.Dynamic/: Install.cabal
src/Data.List/: Install.cabal
src/Data.Maybe/: Install.cabal
src/Data.Typeable/: Install.cabal
src/Fibonacci/: sources.txt
src/GoatsWolvesLions/: Install.cabal
src/GoatsWolvesLions/profiling/: gwl-nonstrict.prof
src/GoatsWolvesLions/src/: GWL-nonstrict.hs  GWL.hs  README.md
src/GoatsWolvesLions/src/misc/: m.prof
src/MTL/: Install.cabal
src/MTL/src/: Stack.hs  StackRWST.hs  StackT.hs  stack.hs  stackT.hs  state.hs
src/Pipes/: Install.cabal
src/Pipes.CSV/: stdinToStdout.prof
src/Reactive.Banana/: Install.cabal
src/Unboxed/: Install.cabal
(+196 files in other folders)
