name:                ToyBox
version:             0.1.0.0
synopsis:            Playing with haskell toys
homepage:            https://github.com/adarqui/ToyBox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.8
