name:                AFP08
version:             0.1.0.0
synopsis:            Some examples/exercises from http://research.microsoft.com/en-us/um/people/simonpj/papers/parallel/AFP08-notes.pdf
homepage:            https://github.com/adarqui/AFP08-notes-examples
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            AFP08
build-type:          Simple
cabal-version:       >=1.8

library
 exposed-modules:
  AFP08
  AFP08.Argv
  AFP08.Elapsed
  AFP08.Fib
  AFP08.Euler
  AFP08.Misc
 build-depends: base ==4.7.*, old-time, parallel, random
 GHC-Options: -Wall
 hs-source-dirs: src

executable "SumFibEuler"
 main-is:             SumFibEuler.hs
 build-depends: base ==4.7.*, old-time, parallel, random
 GHC-Options:         -threaded -O0 -Wall -rtsopts -auto-all -fno-omit-yields
 hs-source-dirs:      src, examples

executable "ParSumFibEuler1"
 main-is:             ParSumFibEuler1.hs
 build-depends: base ==4.7.*, old-time, parallel, random
 GHC-Options:         -threaded -O0 -Wall -rtsopts -auto-all -fno-omit-yields
 hs-source-dirs:      src, examples

executable "ParSumFibEuler2"
 main-is:             ParSumFibEuler2.hs
 build-depends: base ==4.7.*, old-time, parallel, random
 GHC-Options:         -threaded -O0 -Wall -rtsopts -auto-all -fno-omit-yields
 hs-source-dirs:      src, examples

executable "ParSumFibEuler3"
 main-is:             ParSumFibEuler3.hs
 build-depends: base ==4.7.*, old-time, parallel, random
 GHC-Options:         -threaded -O0 -Wall -rtsopts -auto-all -fno-omit-yields
 hs-source-dirs:      src, examples

executable "ParSumFibEuler4"
 main-is:             ParSumFibEuler4.hs
 build-depends: base ==4.7.*, old-time, parallel, random
 GHC-Options:         -threaded -O0 -Wall -rtsopts -auto-all -fno-omit-yields
 hs-source-dirs:      src, examples

executable "QuickSort"
 main-is:             QuickSort.hs
 build-depends: base ==4.7.*, old-time, parallel, random
 GHC-Options:         -threaded -O0 -Wall -rtsopts -auto-all -fno-omit-yields
 hs-source-dirs:      src, examples
