name:                YesodToyBox
version:             0.1.0.0
synopsis:            yesod
homepage:            https://github.com/adarqui/ToyBox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.8

executable "test1"
 main-is:             test1.hs
 build-depends: base ==4.7.*, yesod-platform ==1.2.12.2, yesod
 GHC-Options:         -threaded -O2 -Wall -rtsopts
-- GHC-Options:         -threaded -O2 -Wall -rtsopts --max-backjumps=-1 --reorder-goals
 hs-source-dirs:      src, examples

executable "test2"
 main-is:             test2.hs
 build-depends: base ==4.7.*, yesod-platform ==1.2.12.2, yesod
 GHC-Options:         -threaded -O2 -Wall -rtsopts
 hs-source-dirs:      src, examples

executable "test3"
 main-is:             test3.hs
 build-depends: base ==4.7.*, yesod-platform ==1.2.12.2, yesod, blaze-html, shakespeare
 GHC-Options:         -threaded -O2 -Wall -rtsopts
 hs-source-dirs:      src, examples

executable "test4"
 main-is:             test4.hs
 build-depends: base ==4.7.*, yesod-platform ==1.2.12.2, yesod, blaze-html, shakespeare, text
 GHC-Options:         -threaded -O2 -Wall -rtsopts
 hs-source-dirs:      src, examples

executable "test5"
 main-is:             test5.hs
 build-depends: base ==4.7.*, yesod-platform ==1.2.12.2, yesod, blaze-html, shakespeare, text
 GHC-Options:         -threaded -O2 -Wall -rtsopts
 hs-source-dirs:      src, examples

executable "test6"
 main-is:             test6.hs
 build-depends: base ==4.7.*, yesod-platform ==1.2.12.2, yesod, blaze-html, shakespeare, text
 GHC-Options:         -threaded -O2 -Wall -rtsopts
 hs-source-dirs:      src, examples

executable "test7"
 main-is:             test7.hs
 build-depends: base ==4.7.*, yesod-platform ==1.2.12.2, yesod, blaze-html, shakespeare, text
 GHC-Options:         -threaded -O2 -Wall -rtsopts
 hs-source-dirs:      src, examples

executable "test8"
 main-is:             test8.hs
 build-depends: base ==4.7.*, yesod-platform ==1.2.12.2, yesod, blaze-html, shakespeare, text
 GHC-Options:         -threaded -O2 -Wall -rtsopts
 hs-source-dirs:      src, examples

executable "test9"
 main-is:             test9.hs
 build-depends: base ==4.7.*, yesod-platform ==1.2.12.2, yesod, blaze-html, shakespeare, text
 GHC-Options:         -threaded -O2 -Wall -rtsopts
 hs-source-dirs:      src, examples

executable "test10"
 main-is:             test10.hs
 build-depends: base ==4.7.*, yesod-platform ==1.2.12.2, yesod, blaze-html, shakespeare, text
 GHC-Options:         -threaded -O2 -Wall -rtsopts
 hs-source-dirs:      src, examples
