name:                Common
version:             0.1.0.0
synopsis:            Experimental - haskell variant
homepage:            https://github.com/adarqui/toybox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            Experimental
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
   Common.Sums
  build-depends:
   base ==4.7.*
  GHC-Options:         -Wall -rtsopts
  hs-source-dirs:      ./src
