name:                Criterion
version:             0.1.0.0
synopsis:            ToyBox - haskell variant
homepage:            https://github.com/adarqui/ToyBox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.8

executable "bench"
  main-is:             bench.hs
  build-depends:
   base ==4.7.*,
   criterion,
   mtl,
   Common
  GHC-Options:         -Wall -rtsopts
  hs-source-dirs:      ./src

executable "howlong"
  main-is:             howlong.hs
  build-depends:
   base ==4.7.*,
   criterion
  GHC-Options:         -Wall -rtsopts
  hs-source-dirs:      ./src
