name:                List
version:             0.1.0.0
synopsis:            ToyBox - haskell variant
homepage:            https://github.com/adarqui/ToyBox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.8

executable "maybe"
  main-is:             maybe.hs
  build-depends:
   base ==4.7.*
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "functor"
  main-is:             functor.hs
  build-depends:
   base ==4.7.*
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "monad"
  main-is:             monad.hs
  build-depends:
   base ==4.7.*
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "applicative"
  main-is:             applicative.hs
  build-depends:
   base ==4.7.*
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "alternative"
  main-is:             alternative.hs
  build-depends:
   base ==4.7.*
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "monadfix"
  main-is:             monadfix.hs
  build-depends:
   base ==4.7.*
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "monadplus"
  main-is:             monadplus.hs
  build-depends:
   base ==4.7.*
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "foldable"
  main-is:             foldable.hs
  build-depends:
   base ==4.7.*
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "traversable"
  main-is:             traversable.hs
  build-depends:
   base ==4.7.*
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "typeable"
  main-is:             typeable.hs
  build-depends:
   base ==4.7.*
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src
