name:                Fibonacci
version:             0.1.0.0
synopsis:            ToyBox - haskell variant
homepage:            https://github.com/adarqui/ToyBox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.8

library
 exposed-modules: Fib
 build-depends: base == 4.7.*
 hs-source-dirs: ./lib

executable "fib"
 main-is:             fib.hs
 build-depends:
  base ==4.7.*,
  AFP08,
  Fibonacci
 GHC-Options:         -O2 -Wall -rtsopts
 hs-source-dirs:      ./src
