name:                tb-lens
version:             0.1.0.0
synopsis:            lens examples
homepage:            https://github.com/adarqui/toybox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:
    TB.Lens
  build-depends:
   base >= 4.6 && < 5,
   -- lens: https://hackage.haskell.org/package/lens
   lens >= 4.11
  GHC-Options:         -Wall
  hs-source-dirs:      ./src
