name:                NormalForm
version:             0.1.0.0
synopsis:            ToyBox - haskell variant
homepage:            https://github.com/adarqui/ToyBox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.8

executable "nf-vs-whnf"
  main-is:             nf-vs-whnf.hs
  build-depends:
   base ==4.7.*,
   old-time,
   parallel
  GHC-Options:         -threaded -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src
