name:                Pipes-CSV
version:             0.1.0.0
synopsis:            Experimental
homepage:            https://github.com/adarqui/toybox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            Experimental
build-type:          Simple
cabal-version:       >=1.8

executable "stdinToStdout"
  main-is:             stdinToStdout.hs
  build-depends:
   base ==4.7.*,
   pipes,
   pipes-bytestring,
   pipes-csv,
   cassava ==0.3.0.1
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src
