name:                QuickCheckSandbox
version:             0.1.0.0
synopsis:            ToyBox - haskell variant
homepage:            https://github.com/adarqui/ToyBox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.8

executable "misc"
  main-is:             misc.hs
  build-depends: base ==4.7.*, QuickCheck > 2
  hs-source-dirs:      ./src
