name:                ToyBox
version:             0.1.0.0
synopsis:            ToyBox - haskell variant
homepage:            https://github.com/adarqui/ToyBox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.8

executable "parse"
  main-is:             parse.hs
  build-depends:
   base ==4.7.*,
   csv ==0.1.1,
   pipes
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src
