name:                tb-acme-dont
version:             0.1.0.0
synopsis:            ToyBox - haskell variant
homepage:            https://github.com/adarqui/toybox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.8

Library
  exposed-modules:
   TB.Dont
  build-depends:
   base >= 4.6 && < 5,
   -- acme-dont: https://hackage.haskell.org/package/acme-dont
   acme-dont >= 1.1
  GHC-Options:         -Wall
  hs-source-dirs:      ./src
