name:                tb-acme-dont
version:             0.1.0.0
synopsis:            don't example
description:         don't example
homepage:            https://github.com/adarqui/toybox
license:             MIT
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.18

Library
  exposed-modules:
    TB.Dont
  build-depends:
    base >= 4.6 && < 5,
    -- acme-dont: https://hackage.haskell.org/package/acme-dont
    acme-dont >= 1.1
  GHC-Options:         -Wall
  hs-source-dirs:      ./src
  default-language:    Haskell2010

test-suite doctests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            doctests.hs
  build-depends:      base >4 && <5, doctest, doctest-discover
  HS-Source-Dirs:     test
