name:                tb-acme-omitted
version:             0.1.0.0
synopsis:            omit a function
homepage:            https://github.com/adarqui/toybox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:
    TB.Omitted
  build-depends:
   base >= 4.6 && < 5,
   -- acme-omitted: https://hackage.haskell.org/package/acme-omitted
   acme-omitted >= 2.0.0.0
  GHC-Options:         -Wall
  hs-source-dirs:      ./src
