name:                CH-Tests
version:             0.1.0.0
synopsis:            Experimental - haskell variant
homepage:            https://github.com/adarqui/toybox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            Experimental
build-type:          Simple
cabal-version:       >=1.8

executable "test1"
  main-is:             test1.hs
  build-depends:
   base ==4.7.*, distributed-process, network-transport, network-transport-tcp
  GHC-Options:         -O2 -Wall -rtsopts -auto-all
  hs-source-dirs:      ./src
