name:                tb-quickcheck
version:             0.1.0.0
synopsis:            quickcheck-examples
homepage:            https://github.com/adarqui/toybox
license:             MIT
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.18

library
  default-language:    Haskell2010
  exposed-modules:
    TB.QuickCheck.Basic
  build-depends:
    base >= 4.6 && < 5,
    -- quickcheck: https://hackage.haskell.org/package/QuickCheck
    QuickCheck >= 2.8.1
  hs-source-dirs:      ./src
