name:                Acme-Omitted-ToyBox
version:             0.1.0.0
synopsis:            ToyBox - haskell variant
homepage:            https://github.com/adarqui/ToyBox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.8

executable "omitted"
  main-is:             omitted.hs
  build-depends:
   base ==4.7.*, acme-omitted
  GHC-Options:         -O2 -Wall -rtsopts -auto-all
  hs-source-dirs:      ./src
