name:                MTL
version:             0.1.0.0
synopsis:            ToyBox
homepage:            https://github.com/adarqui/ToyBox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.8

executable "state"
  main-is:             state.hs
  build-depends:
   base ==4.7.*,
   mtl
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "stateT"
  main-is:             stateT.hs
  build-depends:
   base ==4.7.*,
   mtl
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "stack"
  main-is:             stack.hs
  build-depends:
   base ==4.7.*,
   mtl
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "stackT"
  main-is:             stackT.hs
  build-depends:
   base ==4.7.*,
   mtl
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

executable "stackRWST"
  main-is:             stackRWST.hs
  build-depends:
   base ==4.7.*,
   mtl
  GHC-Options:         -O2 -Wall -rtsopts -auto-all -prof
  hs-source-dirs:      ./src

library
  exposed-modules:     Stack, StackT, StackRWST
  build-depends:
   base ==4.7.*,
   mtl
  GHC-Options:         -Wall -rtsopts
  hs-source-dirs:      ./src
