name:                Parallel-Concurrent
version:             0.1.0.0
synopsis:            ToyBox - haskell variant
homepage:            https://github.com/adarqui/ToyBox
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            ToyBox
build-type:          Simple
cabal-version:       >=1.8

executable "Fib"
  main-is:             Fib.hs
  build-depends:
   base ==4.7.*,
   parallel,
   old-time
  GHC-Options:         -threaded -O2 -Wall -rtsopts -auto-all
  hs-source-dirs:      ./src
